compilador/parser.out
Grammar:

Rule 0     S' -> initial
Rule 1     initial -> ALGORITMO CARACTERE ; varAux INICIO ; blocoType FIMALGORITMO ;
Rule 2     varAux -> VAR ; declaracaoType
Rule 3     varAux -> <empty>
Rule 4     blocoType -> <empty>
Rule 5     blocoType -> bloco
Rule 6     declaracaoType -> <empty>
Rule 7     declaracaoType -> declaracaoTypeAux
Rule 8     declaracaoTypeAux -> declaracao ;
Rule 9     declaracaoTypeAux -> declaracao ; declaracaoTypeAux
Rule 10    declaracao -> vartype : LOGICO
Rule 11    declaracao -> vartype : CARACTERE
Rule 12    declaracao -> vartype : REAL
Rule 13    declaracao -> vartype : INTEIRO
Rule 14    vartype -> ID , vartype
Rule 15    vartype -> ID
Rule 16    bloco -> cmd ; bloco
Rule 17    bloco -> cmd ;
Rule 18    cmd -> cmdRepeticao
Rule 19    cmd -> LIMPATELA
Rule 20    cmd -> cmdCondicao
Rule 21    cmd -> cmdleitura
Rule 22    cmd -> cmdescrita
Rule 23    cmd -> cmdattrib
Rule 24    cmdRepeticao -> ENQUANTO expressaoRelacional FACA ; bloco FIMENQUANTO
Rule 25    cmdleitura -> LEIA ( idAux )
Rule 26    idAux -> ID , idAux
Rule 27    idAux -> ID
Rule 28    cmdCondicao -> SE expressaoRelacional ENTAO ; bloco SENAO ; bloco FIMSE
Rule 29    cmdCondicao -> SE expressaoRelacional ENTAO ; bloco FIMSE
Rule 30    expressaoRelacional -> termoRelacional
Rule 31    expressaoRelacional -> expressaoRelacional OP_BOOL termoRelacional
Rule 32    termoRelacional -> ( expressaoRelacional )
Rule 33    termoRelacional -> FALSO
Rule 34    termoRelacional -> VERDADEIRO
Rule 35    termoRelacional -> NAO termoRelacional
Rule 36    termoRelacional -> exprC OP_REL exprC
Rule 37    termoRelacional -> expr OP_REL expr
Rule 38    OP_BOOL -> OU  [precedence=nonassoc, level=1]
Rule 39    OP_BOOL -> E  [precedence=nonassoc, level=1]
Rule 40    OP_REL -> EQ  [precedence=nonassoc, level=1]
Rule 41    OP_REL -> GT  [precedence=nonassoc, level=1]
Rule 42    OP_REL -> GE  [precedence=nonassoc, level=1]
Rule 43    OP_REL -> LT  [precedence=nonassoc, level=1]
Rule 44    OP_REL -> LE  [precedence=nonassoc, level=1]
Rule 45    OP_REL -> NE  [precedence=nonassoc, level=1]
Rule 46    cmdattrib -> ID ASSIGN expressaoRelacional
Rule 47    cmdattrib -> ID ASSIGN exprC
Rule 48    cmdattrib -> ID ASSIGN expr
Rule 49    cmdescrita -> ESCREVAL ( )
Rule 50    cmdescrita -> ESCREVAL ( typeArgsEscrita )
Rule 51    cmdescrita -> ESCREVA ( )
Rule 52    cmdescrita -> ESCREVA ( typeArgsEscrita )
Rule 53    typeArgsEscritaAux -> expressaoRelacional
Rule 54    typeArgsEscritaAux -> exprC
Rule 55    typeArgsEscritaAux -> expr
Rule 56    typeArgsEscrita -> typeArgsEscritaAux
Rule 57    typeArgsEscrita -> typeArgsEscrita , typeArgsEscritaAux
Rule 58    expr -> ID
Rule 59    expr -> REAL
Rule 60    expr -> INTEIRO
Rule 61    expr -> - expr  [precedence=right, level=5]
Rule 62    expr -> + expr  [precedence=right, level=5]
Rule 63    expr -> expr ^ expr  [precedence=right, level=4]
Rule 64    expr -> expr MOD expr  [precedence=left, level=3]
Rule 65    expr -> expr % expr  [precedence=left, level=3]
Rule 66    expr -> expr \ expr  [precedence=left, level=3]
Rule 67    expr -> expr / expr  [precedence=left, level=3]
Rule 68    expr -> expr * expr  [precedence=left, level=3]
Rule 69    expr -> expr - expr  [precedence=left, level=2]
Rule 70    expr -> expr + expr  [precedence=left, level=2]
Rule 71    expr -> ( expr )
Rule 72    exprC -> ID
Rule 73    exprC -> CARACTERE
Rule 74    exprC -> exprC + exprC  [precedence=left, level=2]
Rule 75    exprC -> ( exprC )

Terminals, with rules where they appear:

%                    : 65
(                    : 25 32 49 50 51 52 71 75
)                    : 25 32 49 50 51 52 71 75
*                    : 68
+                    : 62 70 74
,                    : 14 26 57
-                    : 61 69
/                    : 67
:                    : 10 11 12 13
;                    : 1 1 1 2 8 9 16 17 24 28 28 29
ALGORITMO            : 1
ASSIGN               : 46 47 48
CARACTERE            : 1 11 73
E                    : 39
ENQUANTO             : 24
ENTAO                : 28 29
EQ                   : 40
ESCREVA              : 51 52
ESCREVAL             : 49 50
FACA                 : 24
FALSO                : 33
FIMALGORITMO         : 1
FIMENQUANTO          : 24
FIMSE                : 28 29
GE                   : 42
GT                   : 41
ID                   : 14 15 26 27 46 47 48 58 72
INICIO               : 1
INTEIRO              : 13 60
LE                   : 44
LEIA                 : 25
LIMPATELA            : 19
LOGICO               : 10
LT                   : 43
MOD                  : 64
NAO                  : 35
NE                   : 45
OU                   : 38
REAL                 : 12 59
SE                   : 28 29
SENAO                : 28
VAR                  : 2
VERDADEIRO           : 34
\                    : 66
^                    : 63
error                : 

Nonterminals, with rules where they appear:

OP_BOOL              : 31
OP_REL               : 36 37
bloco                : 5 16 24 28 28 29
blocoType            : 1
cmd                  : 16 17
cmdCondicao          : 20
cmdRepeticao         : 18
cmdattrib            : 23
cmdescrita           : 22
cmdleitura           : 21
declaracao           : 8 9
declaracaoType       : 2
declaracaoTypeAux    : 7 9
expr                 : 37 37 48 55 61 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71
exprC                : 36 36 47 54 74 74 75
expressaoRelacional  : 24 28 29 31 32 46 53
idAux                : 25 26
initial              : 0
termoRelacional      : 30 31 35
typeArgsEscrita      : 50 52 57
typeArgsEscritaAux   : 56 57
varAux               : 1
vartype              : 10 11 12 13 14


state 0

    (0) S' -> . initial
    (1) initial -> . ALGORITMO CARACTERE ; varAux INICIO ; blocoType FIMALGORITMO ;
    ALGORITMO       shift and go to state 2

    initial                        shift and go to state 1

state 1

    (0) S' -> initial .


state 2

    (1) initial -> ALGORITMO . CARACTERE ; varAux INICIO ; blocoType FIMALGORITMO ;
    CARACTERE       shift and go to state 3


state 3

    (1) initial -> ALGORITMO CARACTERE . ; varAux INICIO ; blocoType FIMALGORITMO ;
    ;               shift and go to state 4


state 4

    (1) initial -> ALGORITMO CARACTERE ; . varAux INICIO ; blocoType FIMALGORITMO ;
    (2) varAux -> . VAR ; declaracaoType
    (3) varAux -> .
    VAR             shift and go to state 6
    INICIO          reduce using rule 3 (varAux -> .)

    varAux                         shift and go to state 5

state 5

    (1) initial -> ALGORITMO CARACTERE ; varAux . INICIO ; blocoType FIMALGORITMO ;
    INICIO          shift and go to state 7


state 6

    (2) varAux -> VAR . ; declaracaoType
    ;               shift and go to state 8


state 7

    (1) initial -> ALGORITMO CARACTERE ; varAux INICIO . ; blocoType FIMALGORITMO ;
    ;               shift and go to state 9


state 8

    (2) varAux -> VAR ; . declaracaoType
    (6) declaracaoType -> .
    (7) declaracaoType -> . declaracaoTypeAux
    (8) declaracaoTypeAux -> . declaracao ;
    (9) declaracaoTypeAux -> . declaracao ; declaracaoTypeAux
    (10) declaracao -> . vartype : LOGICO
    (11) declaracao -> . vartype : CARACTERE
    (12) declaracao -> . vartype : REAL
    (13) declaracao -> . vartype : INTEIRO
    (14) vartype -> . ID , vartype
    (15) vartype -> . ID
    INICIO          reduce using rule 6 (declaracaoType -> .)
    ID              shift and go to state 14

    declaracaoType                 shift and go to state 10
    declaracaoTypeAux              shift and go to state 11
    declaracao                     shift and go to state 12
    vartype                        shift and go to state 13

state 9

    (1) initial -> ALGORITMO CARACTERE ; varAux INICIO ; . blocoType FIMALGORITMO ;
    (4) blocoType -> .
    (5) blocoType -> . bloco
    (16) bloco -> . cmd ; bloco
    (17) bloco -> . cmd ;
    (18) cmd -> . cmdRepeticao
    (19) cmd -> . LIMPATELA
    (20) cmd -> . cmdCondicao
    (21) cmd -> . cmdleitura
    (22) cmd -> . cmdescrita
    (23) cmd -> . cmdattrib
    (24) cmdRepeticao -> . ENQUANTO expressaoRelacional FACA ; bloco FIMENQUANTO
    (28) cmdCondicao -> . SE expressaoRelacional ENTAO ; bloco SENAO ; bloco FIMSE
    (29) cmdCondicao -> . SE expressaoRelacional ENTAO ; bloco FIMSE
    (25) cmdleitura -> . LEIA ( idAux )
    (49) cmdescrita -> . ESCREVAL ( )
    (50) cmdescrita -> . ESCREVAL ( typeArgsEscrita )
    (51) cmdescrita -> . ESCREVA ( )
    (52) cmdescrita -> . ESCREVA ( typeArgsEscrita )
    (46) cmdattrib -> . ID ASSIGN expressaoRelacional
    (47) cmdattrib -> . ID ASSIGN exprC
    (48) cmdattrib -> . ID ASSIGN expr
    FIMALGORITMO    reduce using rule 4 (blocoType -> .)
    LIMPATELA       shift and go to state 19
    ENQUANTO        shift and go to state 24
    SE              shift and go to state 25
    LEIA            shift and go to state 26
    ESCREVAL        shift and go to state 27
    ESCREVA         shift and go to state 28
    ID              shift and go to state 29

    blocoType                      shift and go to state 15
    bloco                          shift and go to state 16
    cmd                            shift and go to state 17
    cmdRepeticao                   shift and go to state 18
    cmdCondicao                    shift and go to state 20
    cmdleitura                     shift and go to state 21
    cmdescrita                     shift and go to state 22
    cmdattrib                      shift and go to state 23

state 10

    (2) varAux -> VAR ; declaracaoType .
    INICIO          reduce using rule 2 (varAux -> VAR ; declaracaoType .)


state 11

    (7) declaracaoType -> declaracaoTypeAux .
    INICIO          reduce using rule 7 (declaracaoType -> declaracaoTypeAux .)


state 12

    (8) declaracaoTypeAux -> declaracao . ;
    (9) declaracaoTypeAux -> declaracao . ; declaracaoTypeAux
    ;               shift and go to state 30


state 13

    (10) declaracao -> vartype . : LOGICO
    (11) declaracao -> vartype . : CARACTERE
    (12) declaracao -> vartype . : REAL
    (13) declaracao -> vartype . : INTEIRO
    :               shift and go to state 31


state 14

    (14) vartype -> ID . , vartype
    (15) vartype -> ID .
    ,               shift and go to state 32
    :               reduce using rule 15 (vartype -> ID .)


state 15

    (1) initial -> ALGORITMO CARACTERE ; varAux INICIO ; blocoType . FIMALGORITMO ;
    FIMALGORITMO    shift and go to state 33


state 16

    (5) blocoType -> bloco .
    FIMALGORITMO    reduce using rule 5 (blocoType -> bloco .)


state 17

    (16) bloco -> cmd . ; bloco
    (17) bloco -> cmd . ;
    ;               shift and go to state 34


state 18

    (18) cmd -> cmdRepeticao .
    ;               reduce using rule 18 (cmd -> cmdRepeticao .)


state 19

    (19) cmd -> LIMPATELA .
    ;               reduce using rule 19 (cmd -> LIMPATELA .)


state 20

    (20) cmd -> cmdCondicao .
    ;               reduce using rule 20 (cmd -> cmdCondicao .)


state 21

    (21) cmd -> cmdleitura .
    ;               reduce using rule 21 (cmd -> cmdleitura .)


state 22

    (22) cmd -> cmdescrita .
    ;               reduce using rule 22 (cmd -> cmdescrita .)


state 23

    (23) cmd -> cmdattrib .
    ;               reduce using rule 23 (cmd -> cmdattrib .)


state 24

    (24) cmdRepeticao -> ENQUANTO . expressaoRelacional FACA ; bloco FIMENQUANTO
    (30) expressaoRelacional -> . termoRelacional
    (31) expressaoRelacional -> . expressaoRelacional OP_BOOL termoRelacional
    (32) termoRelacional -> . ( expressaoRelacional )
    (33) termoRelacional -> . FALSO
    (34) termoRelacional -> . VERDADEIRO
    (35) termoRelacional -> . NAO termoRelacional
    (36) termoRelacional -> . exprC OP_REL exprC
    (37) termoRelacional -> . expr OP_REL expr
    (72) exprC -> . ID
    (73) exprC -> . CARACTERE
    (74) exprC -> . exprC + exprC
    (75) exprC -> . ( exprC )
    (58) expr -> . ID
    (59) expr -> . REAL
    (60) expr -> . INTEIRO
    (61) expr -> . - expr
    (62) expr -> . + expr
    (63) expr -> . expr ^ expr
    (64) expr -> . expr MOD expr
    (65) expr -> . expr % expr
    (66) expr -> . expr \ expr
    (67) expr -> . expr / expr
    (68) expr -> . expr * expr
    (69) expr -> . expr - expr
    (70) expr -> . expr + expr
    (71) expr -> . ( expr )
    (               shift and go to state 37
    FALSO           shift and go to state 38
    VERDADEIRO      shift and go to state 39
    NAO             shift and go to state 40
    ID              shift and go to state 43
    CARACTERE       shift and go to state 44
    REAL            shift and go to state 46
    INTEIRO         shift and go to state 47
    -               shift and go to state 48
    +               shift and go to state 45

    expressaoRelacional            shift and go to state 35
    termoRelacional                shift and go to state 36
    exprC                          shift and go to state 41
    expr                           shift and go to state 42

state 25

    (28) cmdCondicao -> SE . expressaoRelacional ENTAO ; bloco SENAO ; bloco FIMSE
    (29) cmdCondicao -> SE . expressaoRelacional ENTAO ; bloco FIMSE
    (30) expressaoRelacional -> . termoRelacional
    (31) expressaoRelacional -> . expressaoRelacional OP_BOOL termoRelacional
    (32) termoRelacional -> . ( expressaoRelacional )
    (33) termoRelacional -> . FALSO
    (34) termoRelacional -> . VERDADEIRO
    (35) termoRelacional -> . NAO termoRelacional
    (36) termoRelacional -> . exprC OP_REL exprC
    (37) termoRelacional -> . expr OP_REL expr
    (72) exprC -> . ID
    (73) exprC -> . CARACTERE
    (74) exprC -> . exprC + exprC
    (75) exprC -> . ( exprC )
    (58) expr -> . ID
    (59) expr -> . REAL
    (60) expr -> . INTEIRO
    (61) expr -> . - expr
    (62) expr -> . + expr
    (63) expr -> . expr ^ expr
    (64) expr -> . expr MOD expr
    (65) expr -> . expr % expr
    (66) expr -> . expr \ expr
    (67) expr -> . expr / expr
    (68) expr -> . expr * expr
    (69) expr -> . expr - expr
    (70) expr -> . expr + expr
    (71) expr -> . ( expr )
    (               shift and go to state 37
    FALSO           shift and go to state 38
    VERDADEIRO      shift and go to state 39
    NAO             shift and go to state 40
    ID              shift and go to state 43
    CARACTERE       shift and go to state 44
    REAL            shift and go to state 46
    INTEIRO         shift and go to state 47
    -               shift and go to state 48
    +               shift and go to state 45

    expressaoRelacional            shift and go to state 49
    termoRelacional                shift and go to state 36
    exprC                          shift and go to state 41
    expr                           shift and go to state 42

state 26

    (25) cmdleitura -> LEIA . ( idAux )
    (               shift and go to state 50


state 27

    (49) cmdescrita -> ESCREVAL . ( )
    (50) cmdescrita -> ESCREVAL . ( typeArgsEscrita )
    (               shift and go to state 51


state 28

    (51) cmdescrita -> ESCREVA . ( )
    (52) cmdescrita -> ESCREVA . ( typeArgsEscrita )
    (               shift and go to state 52


state 29

    (46) cmdattrib -> ID . ASSIGN expressaoRelacional
    (47) cmdattrib -> ID . ASSIGN exprC
    (48) cmdattrib -> ID . ASSIGN expr
    ASSIGN          shift and go to state 53


state 30

    (8) declaracaoTypeAux -> declaracao ; .
    (9) declaracaoTypeAux -> declaracao ; . declaracaoTypeAux
    (8) declaracaoTypeAux -> . declaracao ;
    (9) declaracaoTypeAux -> . declaracao ; declaracaoTypeAux
    (10) declaracao -> . vartype : LOGICO
    (11) declaracao -> . vartype : CARACTERE
    (12) declaracao -> . vartype : REAL
    (13) declaracao -> . vartype : INTEIRO
    (14) vartype -> . ID , vartype
    (15) vartype -> . ID
    INICIO          reduce using rule 8 (declaracaoTypeAux -> declaracao ; .)
    ID              shift and go to state 14

    declaracao                     shift and go to state 12
    declaracaoTypeAux              shift and go to state 54
    vartype                        shift and go to state 13

state 31

    (10) declaracao -> vartype : . LOGICO
    (11) declaracao -> vartype : . CARACTERE
    (12) declaracao -> vartype : . REAL
    (13) declaracao -> vartype : . INTEIRO
    LOGICO          shift and go to state 55
    CARACTERE       shift and go to state 56
    REAL            shift and go to state 57
    INTEIRO         shift and go to state 58


state 32

    (14) vartype -> ID , . vartype
    (14) vartype -> . ID , vartype
    (15) vartype -> . ID
    ID              shift and go to state 14

    vartype                        shift and go to state 59

state 33

    (1) initial -> ALGORITMO CARACTERE ; varAux INICIO ; blocoType FIMALGORITMO . ;
    ;               shift and go to state 60


state 34

    (16) bloco -> cmd ; . bloco
    (17) bloco -> cmd ; .
    (16) bloco -> . cmd ; bloco
    (17) bloco -> . cmd ;
    (18) cmd -> . cmdRepeticao
    (19) cmd -> . LIMPATELA
    (20) cmd -> . cmdCondicao
    (21) cmd -> . cmdleitura
    (22) cmd -> . cmdescrita
    (23) cmd -> . cmdattrib
    (24) cmdRepeticao -> . ENQUANTO expressaoRelacional FACA ; bloco FIMENQUANTO
    (28) cmdCondicao -> . SE expressaoRelacional ENTAO ; bloco SENAO ; bloco FIMSE
    (29) cmdCondicao -> . SE expressaoRelacional ENTAO ; bloco FIMSE
    (25) cmdleitura -> . LEIA ( idAux )
    (49) cmdescrita -> . ESCREVAL ( )
    (50) cmdescrita -> . ESCREVAL ( typeArgsEscrita )
    (51) cmdescrita -> . ESCREVA ( )
    (52) cmdescrita -> . ESCREVA ( typeArgsEscrita )
    (46) cmdattrib -> . ID ASSIGN expressaoRelacional
    (47) cmdattrib -> . ID ASSIGN exprC
    (48) cmdattrib -> . ID ASSIGN expr
    FIMALGORITMO    reduce using rule 17 (bloco -> cmd ; .)
    FIMENQUANTO     reduce using rule 17 (bloco -> cmd ; .)
    SENAO           reduce using rule 17 (bloco -> cmd ; .)
    FIMSE           reduce using rule 17 (bloco -> cmd ; .)
    LIMPATELA       shift and go to state 19
    ENQUANTO        shift and go to state 24
    SE              shift and go to state 25
    LEIA            shift and go to state 26
    ESCREVAL        shift and go to state 27
    ESCREVA         shift and go to state 28
    ID              shift and go to state 29

    cmd                            shift and go to state 17
    bloco                          shift and go to state 61
    cmdRepeticao                   shift and go to state 18
    cmdCondicao                    shift and go to state 20
    cmdleitura                     shift and go to state 21
    cmdescrita                     shift and go to state 22
    cmdattrib                      shift and go to state 23

state 35

    (24) cmdRepeticao -> ENQUANTO expressaoRelacional . FACA ; bloco FIMENQUANTO
    (31) expressaoRelacional -> expressaoRelacional . OP_BOOL termoRelacional
    (38) OP_BOOL -> . OU
    (39) OP_BOOL -> . E
    FACA            shift and go to state 62
    OU              shift and go to state 64
    E               shift and go to state 65

    OP_BOOL                        shift and go to state 63

state 36

    (30) expressaoRelacional -> termoRelacional .
    FACA            reduce using rule 30 (expressaoRelacional -> termoRelacional .)
    OU              reduce using rule 30 (expressaoRelacional -> termoRelacional .)
    E               reduce using rule 30 (expressaoRelacional -> termoRelacional .)
    ENTAO           reduce using rule 30 (expressaoRelacional -> termoRelacional .)
    )               reduce using rule 30 (expressaoRelacional -> termoRelacional .)
    ,               reduce using rule 30 (expressaoRelacional -> termoRelacional .)
    ;               reduce using rule 30 (expressaoRelacional -> termoRelacional .)


state 37

    (32) termoRelacional -> ( . expressaoRelacional )
    (75) exprC -> ( . exprC )
    (71) expr -> ( . expr )
    (30) expressaoRelacional -> . termoRelacional
    (31) expressaoRelacional -> . expressaoRelacional OP_BOOL termoRelacional
    (72) exprC -> . ID
    (73) exprC -> . CARACTERE
    (74) exprC -> . exprC + exprC
    (75) exprC -> . ( exprC )
    (58) expr -> . ID
    (59) expr -> . REAL
    (60) expr -> . INTEIRO
    (61) expr -> . - expr
    (62) expr -> . + expr
    (63) expr -> . expr ^ expr
    (64) expr -> . expr MOD expr
    (65) expr -> . expr % expr
    (66) expr -> . expr \ expr
    (67) expr -> . expr / expr
    (68) expr -> . expr * expr
    (69) expr -> . expr - expr
    (70) expr -> . expr + expr
    (71) expr -> . ( expr )
    (32) termoRelacional -> . ( expressaoRelacional )
    (33) termoRelacional -> . FALSO
    (34) termoRelacional -> . VERDADEIRO
    (35) termoRelacional -> . NAO termoRelacional
    (36) termoRelacional -> . exprC OP_REL exprC
    (37) termoRelacional -> . expr OP_REL expr
    ID              shift and go to state 43
    CARACTERE       shift and go to state 44
    (               shift and go to state 66
    REAL            shift and go to state 46
    INTEIRO         shift and go to state 47
    -               shift and go to state 48
    +               shift and go to state 45
    FALSO           shift and go to state 38
    VERDADEIRO      shift and go to state 39
    NAO             shift and go to state 40

    expressaoRelacional            shift and go to state 67
    exprC                          shift and go to state 68
    expr                           shift and go to state 69
    termoRelacional                shift and go to state 36

state 38

    (33) termoRelacional -> FALSO .
    FACA            reduce using rule 33 (termoRelacional -> FALSO .)
    OU              reduce using rule 33 (termoRelacional -> FALSO .)
    E               reduce using rule 33 (termoRelacional -> FALSO .)
    ENTAO           reduce using rule 33 (termoRelacional -> FALSO .)
    )               reduce using rule 33 (termoRelacional -> FALSO .)
    ,               reduce using rule 33 (termoRelacional -> FALSO .)
    ;               reduce using rule 33 (termoRelacional -> FALSO .)


state 39

    (34) termoRelacional -> VERDADEIRO .
    FACA            reduce using rule 34 (termoRelacional -> VERDADEIRO .)
    OU              reduce using rule 34 (termoRelacional -> VERDADEIRO .)
    E               reduce using rule 34 (termoRelacional -> VERDADEIRO .)
    ENTAO           reduce using rule 34 (termoRelacional -> VERDADEIRO .)
    )               reduce using rule 34 (termoRelacional -> VERDADEIRO .)
    ,               reduce using rule 34 (termoRelacional -> VERDADEIRO .)
    ;               reduce using rule 34 (termoRelacional -> VERDADEIRO .)


state 40

    (35) termoRelacional -> NAO . termoRelacional
    (32) termoRelacional -> . ( expressaoRelacional )
    (33) termoRelacional -> . FALSO
    (34) termoRelacional -> . VERDADEIRO
    (35) termoRelacional -> . NAO termoRelacional
    (36) termoRelacional -> . exprC OP_REL exprC
    (37) termoRelacional -> . expr OP_REL expr
    (72) exprC -> . ID
    (73) exprC -> . CARACTERE
    (74) exprC -> . exprC + exprC
    (75) exprC -> . ( exprC )
    (58) expr -> . ID
    (59) expr -> . REAL
    (60) expr -> . INTEIRO
    (61) expr -> . - expr
    (62) expr -> . + expr
    (63) expr -> . expr ^ expr
    (64) expr -> . expr MOD expr
    (65) expr -> . expr % expr
    (66) expr -> . expr \ expr
    (67) expr -> . expr / expr
    (68) expr -> . expr * expr
    (69) expr -> . expr - expr
    (70) expr -> . expr + expr
    (71) expr -> . ( expr )
    (               shift and go to state 37
    FALSO           shift and go to state 38
    VERDADEIRO      shift and go to state 39
    NAO             shift and go to state 40
    ID              shift and go to state 43
    CARACTERE       shift and go to state 44
    REAL            shift and go to state 46
    INTEIRO         shift and go to state 47
    -               shift and go to state 48
    +               shift and go to state 45

    termoRelacional                shift and go to state 70
    exprC                          shift and go to state 41
    expr                           shift and go to state 42

state 41

    (36) termoRelacional -> exprC . OP_REL exprC
    (74) exprC -> exprC . + exprC
    (40) OP_REL -> . EQ
    (41) OP_REL -> . GT
    (42) OP_REL -> . GE
    (43) OP_REL -> . LT
    (44) OP_REL -> . LE
    (45) OP_REL -> . NE
    +               shift and go to state 72
    EQ              shift and go to state 73
    GT              shift and go to state 74
    GE              shift and go to state 75
    LT              shift and go to state 76
    LE              shift and go to state 77
    NE              shift and go to state 78

    OP_REL                         shift and go to state 71

state 42

    (37) termoRelacional -> expr . OP_REL expr
    (63) expr -> expr . ^ expr
    (64) expr -> expr . MOD expr
    (65) expr -> expr . % expr
    (66) expr -> expr . \ expr
    (67) expr -> expr . / expr
    (68) expr -> expr . * expr
    (69) expr -> expr . - expr
    (70) expr -> expr . + expr
    (40) OP_REL -> . EQ
    (41) OP_REL -> . GT
    (42) OP_REL -> . GE
    (43) OP_REL -> . LT
    (44) OP_REL -> . LE
    (45) OP_REL -> . NE
    ^               shift and go to state 80
    MOD             shift and go to state 81
    %               shift and go to state 82
    \               shift and go to state 83
    /               shift and go to state 84
    *               shift and go to state 85
    -               shift and go to state 86
    +               shift and go to state 87
    EQ              shift and go to state 73
    GT              shift and go to state 74
    GE              shift and go to state 75
    LT              shift and go to state 76
    LE              shift and go to state 77
    NE              shift and go to state 78

    OP_REL                         shift and go to state 79

state 43

    (72) exprC -> ID .
    (58) expr -> ID .
  ! reduce/reduce conflict for + resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for EQ resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for GT resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for GE resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for LT resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for LE resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for NE resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for ) resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for , resolved using rule 58 (expr -> ID .)
  ! reduce/reduce conflict for ; resolved using rule 58 (expr -> ID .)
    ^               reduce using rule 58 (expr -> ID .)
    MOD             reduce using rule 58 (expr -> ID .)
    %               reduce using rule 58 (expr -> ID .)
    \               reduce using rule 58 (expr -> ID .)
    /               reduce using rule 58 (expr -> ID .)
    *               reduce using rule 58 (expr -> ID .)
    -               reduce using rule 58 (expr -> ID .)
    +               reduce using rule 58 (expr -> ID .)
    EQ              reduce using rule 58 (expr -> ID .)
    GT              reduce using rule 58 (expr -> ID .)
    GE              reduce using rule 58 (expr -> ID .)
    LT              reduce using rule 58 (expr -> ID .)
    LE              reduce using rule 58 (expr -> ID .)
    NE              reduce using rule 58 (expr -> ID .)
    )               reduce using rule 58 (expr -> ID .)
    ,               reduce using rule 58 (expr -> ID .)
    ;               reduce using rule 58 (expr -> ID .)


state 44

    (73) exprC -> CARACTERE .
    +               reduce using rule 73 (exprC -> CARACTERE .)
    EQ              reduce using rule 73 (exprC -> CARACTERE .)
    GT              reduce using rule 73 (exprC -> CARACTERE .)
    GE              reduce using rule 73 (exprC -> CARACTERE .)
    LT              reduce using rule 73 (exprC -> CARACTERE .)
    LE              reduce using rule 73 (exprC -> CARACTERE .)
    NE              reduce using rule 73 (exprC -> CARACTERE .)
    )               reduce using rule 73 (exprC -> CARACTERE .)
    ,               reduce using rule 73 (exprC -> CARACTERE .)
    ;               reduce using rule 73 (exprC -> CARACTERE .)
    FACA            reduce using rule 73 (exprC -> CARACTERE .)
    OU              reduce using rule 73 (exprC -> CARACTERE .)
    E               reduce using rule 73 (exprC -> CARACTERE .)
    ENTAO           reduce using rule 73 (exprC -> CARACTERE .)


state 45

    (62) expr -> + . expr
    (58) expr -> . ID
    (59) expr -> . REAL
    (60) expr -> . INTEIRO
    (61) expr -> . - expr
    (62) expr -> . + expr
    (63) expr -> . expr ^ expr
    (64) expr -> . expr MOD expr
    (65) expr -> . expr % expr
    (66) expr -> . expr \ expr
    (67) expr -> . expr / expr
    (68) expr -> . expr * expr
    (69) expr -> . expr - expr
    (70) expr -> . expr + expr
    (71) expr -> . ( expr )
    ID              shift and go to state 89
    REAL            shift and go to state 46
    INTEIRO         shift and go to state 47
    -               shift and go to state 48
    +               shift and go to state 45
    (               shift and go to state 90

    expr                           shift and go to state 88

state 46

    (59) expr -> REAL .
    ^               reduce using rule 59 (expr -> REAL .)
    MOD             reduce using rule 59 (expr -> REAL .)
    %               reduce using rule 59 (expr -> REAL .)
    \               reduce using rule 59 (expr -> REAL .)
    /               reduce using rule 59 (expr -> REAL .)
    *               reduce using rule 59 (expr -> REAL .)
    -               reduce using rule 59 (expr -> REAL .)
    +               reduce using rule 59 (expr -> REAL .)
    EQ              reduce using rule 59 (expr -> REAL .)
    GT              reduce using rule 59 (expr -> REAL .)
    GE              reduce using rule 59 (expr -> REAL .)
    LT              reduce using rule 59 (expr -> REAL .)
    LE              reduce using rule 59 (expr -> REAL .)
    NE              reduce using rule 59 (expr -> REAL .)
    )               reduce using rule 59 (expr -> REAL .)
    ,               reduce using rule 59 (expr -> REAL .)
    ;               reduce using rule 59 (expr -> REAL .)
    FACA            reduce using rule 59 (expr -> REAL .)
    OU              reduce using rule 59 (expr -> REAL .)
    E               reduce using rule 59 (expr -> REAL .)
    ENTAO           reduce using rule 59 (expr -> REAL .)


state 47

    (60) expr -> INTEIRO .
    ^               reduce using rule 60 (expr -> INTEIRO .)
    MOD             reduce using rule 60 (expr -> INTEIRO .)
    %               reduce using rule 60 (expr -> INTEIRO .)
    \               reduce using rule 60 (expr -> INTEIRO .)
    /               reduce using rule 60 (expr -> INTEIRO .)
    *               reduce using rule 60 (expr -> INTEIRO .)
    -               reduce using rule 60 (expr -> INTEIRO .)
    +               reduce using rule 60 (expr -> INTEIRO .)
    EQ              reduce using rule 60 (expr -> INTEIRO .)
    GT              reduce using rule 60 (expr -> INTEIRO .)
    GE              reduce using rule 60 (expr -> INTEIRO .)
    LT              reduce using rule 60 (expr -> INTEIRO .)
    LE              reduce using rule 60 (expr -> INTEIRO .)
    NE              reduce using rule 60 (expr -> INTEIRO .)
    )               reduce using rule 60 (expr -> INTEIRO .)
    ,               reduce using rule 60 (expr -> INTEIRO .)
    ;               reduce using rule 60 (expr -> INTEIRO .)
    FACA            reduce using rule 60 (expr -> INTEIRO .)
    OU              reduce using rule 60 (expr -> INTEIRO .)
    E               reduce using rule 60 (expr -> INTEIRO .)
    ENTAO           reduce using rule 60 (expr -> INTEIRO .)


state 48

    (61) expr -> - . expr
    (58) expr -> . ID
    (59) expr -> . REAL
    (60) expr -> . INTEIRO
    (61) expr -> . - expr
    (62) expr -> . + expr
    (63) expr -> . expr ^ expr
    (64) expr -> . expr MOD expr
    (65) expr -> . expr % expr
    (66) expr -> . expr \ expr
    (67) expr -> . expr / expr
    (68) expr -> . expr * expr
    (69) expr -> . expr - expr
    (70) expr -> . expr + expr
    (71) expr -> . ( expr )
    ID              shift and go to state 89
    REAL            shift and go to state 46
    INTEIRO         shift and go to state 47
    -               shift and go to state 48
    +               shift and go to state 45
    (               shift and go to state 90

    expr                           shift and go to state 91

state 49
